--- a/ATM-frontend/package.json
+++ b/ATM-frontend/package.json
@@ -11,12 +11,15 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "element-plus": "^2.8.6",
+    "querystring": "^0.2.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/axios": "^0.14.4",
     "@types/node": "^20.16.11",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
