对密码加密，git忽略项目，自动创建用户的修改

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,23 @@ venv.bak/
 node_modules/
 npm-debug.log
 yarn-error.log
+package-lock.json
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
